# site-to-rss

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  sources.yml  state.json
.github/workflows/: check-updates.yml
docs/: feed.xml  hellogithub.xml  index.html  ruanyf-weekly.xml
scripts/: check_updates.py  requirements.txt
templates/: index_template.html
